# nalu

./: .gitignore  BUILD_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
src/nalu/: cli.py  config.py  daemon.py  hotswap.py  onboarding.py  permissions.py
src/nalu/actuator/: __init__.py  dispatch.py  hotkey.py
src/nalu/agents/: responder.py
src/nalu/agents/planner/: annotate.py  history.py  jitter.py  loops.py  planner.py  screen_change.py  settle.py  validate.py  verifier.py
src/nalu/agents/planner_llm/: __init__.py  decomposer.py  prompts.py  subgoal.py
src/nalu/agents/trainer/: __init__.py  dataset.py  eval.py  external.py  merger.py  runner.py  (+1 more)
src/nalu/bus/: __init__.py  bus.py
src/nalu/capture/: __init__.py  continuous.py  screen.py
src/nalu/dashboard/: analytics.py  app.py  interaction.py  latency.py  timeline.py
src/nalu/menubar/: __init__.py  app.py  state.py
tests/: test_always_on.py  test_analytics.py  test_annotate.py  test_daemon_router.py  test_history.py  test_interaction.py  test_jitter.py  test_latency.py  test_loops.py  test_menubar_state.py  test_onboarding.py  test_planner_dispatch.py  test_planner_history.py  test_planner_integration.py  test_planner_llm_decomposer.py  test_planner_llm_parser.py  test_proactive.py  test_responder.py  test_screen_change.py  test_settle.py  test_timeline.py  test_trainer_dataset.py  test_trainer_eval.py  test_trainer_external.py  test_trainer_merger.py  test_trainer_runner.py  test_validate.py  test_verifier.py  test_vision_parser.py  test_vision_registry.py  test_wakeword.py
(+10 files in other folders)
