[project]
name = "nalu"
version = "0.0.1"
description = "Nalu — fully local, open-source vision agent for macOS. Sees, hears, speaks, acts. Standalone, no cloud."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Michael Berry" }]
requires-python = ">=3.11,<3.13"

dependencies = [
    "mlx>=0.30.0",
    "mlx-vlm>=0.4.0",
    "mlx-lm>=0.21.0",
    "pyobjc-framework-Quartz>=11.0",
    "pyobjc-framework-Cocoa>=11.0",
    "pyobjc-framework-ApplicationServices>=11.0",
    "pynput>=1.8.1",
    "piper-tts>=1.3.0",
    "faster-whisper>=1.2.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "numpy>=2.1",
    "pillow>=11.0",
    "streamlit>=1.41",
    "altair>=5.5",
    "pandas>=2.2",
    "typer>=0.15",
    "structlog>=24.4",
    "huggingface-hub>=0.27",
    "rich>=13.9",
    "torch>=2.4",
    "torchvision>=0.19",
    "pyyaml>=6.0",
]

[project.scripts]
nalu = "nalu.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nalu"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
